...
                                            <textField opaque="NO" contentMode="scaleToFill" horizontalHuggingPriority="249" contentHorizontalAlignment="left" contentVerticalAlignment="center" placeholder="enter comma seperated symbols (max 3)" textAlignment="natural" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="0QS-kI-8XT">
                                                <rect key="frame" x="10" y="10" width="304" height="40"/>
                                                <accessibility key="accessibilityConfiguration" identifier="symbols-field"/>
                                                <constraints>
                                                    <constraint firstAttribute="height" constant="40" id="EoC-oP-ifK"/>
...
                                                <rect key="frame" x="324" y="10" width="80" height="40"/>
                                                <color key="backgroundColor" red="0.82745098039999998" green="0.066666666669999999" blue="0.27058823529999998" alpha="1" colorSpace="calibratedRGB"/>
                                                <accessibility key="accessibilityConfiguration" identifier="compare-button"/>
                                                <constraints>
                                                    <constraint firstAttribute="width" relation="greaterThanOrEqual" constant="80" id="Khe-as-CKs"/>
...
                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="No data to display" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="Ksn-8U-QNq">
                                <rect key="frame" x="137.5" y="438" width="139" height="20"/>
                                <accessibility key="accessibilityConfiguration" identifier="no-data-label-daily"/>
                                <fontDescription key="fontDescription" name="HelveticaNeue" family="Helvetica Neue" pointSize="17"/>
                                <color key="textColor" white="0.33333333329999998" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
...
                            <textField opaque="NO" contentMode="scaleToFill" horizontalHuggingPriority="249" contentHorizontalAlignment="left" contentVerticalAlignment="center" placeholder="enter api key" textAlignment="natural" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="e6d-qS-D7z">
                                <rect key="frame" x="15" y="149" width="384" height="40"/>
                                <accessibility key="accessibilityConfiguration" identifier="api-key-field"/>
                                <constraints>
                                    <constraint firstAttribute="height" constant="40" id="YpI-Qq-QK1"/>
...
                            <textField opaque="NO" contentMode="scaleToFill" horizontalHuggingPriority="249" contentHorizontalAlignment="left" contentVerticalAlignment="center" placeholder="select interval" textAlignment="natural" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="dIu-ui-LBt">
                                <rect key="frame" x="15" y="240" width="384" height="40"/>
                                <accessibility key="accessibilityConfiguration" identifier="interval-field"/>
                                <constraints>
                                    <constraint firstAttribute="height" constant="40" id="fvN-AT-uWU"/>
...
                                <rect key="frame" x="15" y="421" width="384" height="45"/>
                                <color key="backgroundColor" red="0.82745098039999998" green="0.066666666669999999" blue="0.27058823529999998" alpha="1" colorSpace="calibratedRGB"/>
                                <accessibility key="accessibilityConfiguration" identifier="settings-save-button"/>
                                <constraints>
                                    <constraint firstAttribute="height" constant="45" id="FdZ-Oc-Qso"/>
...
                        </constraints>
                    </view>
                    <navigationItem key="navigationItem" title="Settings" id="7UH-Vh-al6"/>
                    <connections>
                        <outlet property="apiKeyField" destination="e6d-qS-D7z" id="zu0-md-fw1"/>
...
                                            <textField opaque="NO" contentMode="scaleToFill" horizontalHuggingPriority="249" contentHorizontalAlignment="left" contentVerticalAlignment="center" placeholder="enter a symbol" textAlignment="natural" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="Z2Y-i8-WSH">
                                                <rect key="frame" x="10" y="10" width="304" height="40"/>
                                                <accessibility key="accessibilityConfiguration" identifier="symbol-field"/>
                                                <constraints>
                                                    <constraint firstAttribute="height" constant="40" id="Ixh-zk-T7H"/>
...
                                                <rect key="frame" x="324" y="10" width="80" height="40"/>
                                                <color key="backgroundColor" red="0.82745098039999998" green="0.066666666669999999" blue="0.27058823529999998" alpha="1" colorSpace="calibratedRGB"/>
                                                <accessibility key="accessibilityConfiguration" identifier="info-button"/>
                                                <constraints>
                                                    <constraint firstAttribute="height" constant="40" id="G9U-Jb-qxj"/>
...
                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="No data to display" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="oPS-N5-I91">
                                <rect key="frame" x="137.5" y="438" width="139" height="20"/>
                                <accessibility key="accessibilityConfiguration" identifier="no-data-label"/>
                                <fontDescription key="fontDescription" name="HelveticaNeue" family="Helvetica Neue" pointSize="17"/>
                                <color key="textColor" white="0.33333333333333331" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
...
                        </constraints>
                    </view>
                    <navigationItem key="navigationItem" title="Intraday" largeTitleDisplayMode="never" id="7HQ-k7-FHC">
                        <barButtonItem key="rightBarButtonItem" image="sortIcon" id="nRI-7C-ocf">
                            <connections>
...
            <objects>
                <navigationController automaticallyAdjustsScrollViewInsets="NO" id="AxW-Nf-xmQ" sceneMemberID="viewController">
                    <tabBarItem key="tabBarItem" title="Daily" image="book.fill" catalog="system" id="KRL-So-mEU"/>
                    <toolbarItems/>
                    <navigationBar key="navigationBar" contentMode="scaleToFill" insetsLayoutMarginsFromSafeArea="NO" id="n88-tY-cCo">
...
