...
        compareBtn.alpha = enabled ? 1.0 : 0.5
    }
    
    private func setupUI() {
        /// to hide extra lines
        dailyTableView.tableFooterView = UIView()
        dailyTableView.accessibilityIdentifier = "daily-tableview"
        /// add left view to symbolTextField
        symbolsTextField.leftViewMode = .always
        symbolsTextField.leftView = UIView(frame: .init(x: 0, y: 0, width: 10, height: 20))
    }
    
    //MARK: - Event handler methods
...
