...
        if let p = parent {
            let alertView: UIAlertController = UIAlertController(title:title, message: message, preferredStyle: .alert)
            let okAction = UIAlertAction(title: "Ok", style: .default, handler: nil)
            /// Add the actions.
            alertView.addAction(okAction)
            /// add accesibility identifier
            alertView.view.accessibilityIdentifier = "common-alert"
            p.present(alertView, animated: true, completion: nil)
        }
    }
    
    /// show activityIndicator on given UIView
    /// - parameters:
...
