...
        getInfoBtn.alpha = enabled ? 1.0 : 0.5
    }
    
    private func setupUI() {
        /// to hide extra lines
        intradayTableView.tableFooterView = UIView()
        intradayTableView.accessibilityIdentifier = "intraday-tableview"
        /// add left view to symbolTextField
        symbolTextField.leftViewMode = .always
        symbolTextField.leftView = UIView(frame: .init(x: 0, y: 0, width: 10, height: 20))
        /// create sort options actionsheet
        sortOptionsSheet = UIAlertController(title: "", message: AppConstants.sorting_option_message, preferredStyle: .actionSheet)
        sortOptionsSheet?.view.tintColor = AppConstants.theme_color
...
